Added datatype for handling (magic) primary type values and 2DA-related improvements